--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Kalam:wght@300;400;700&display=swap"
       rel="stylesheet"
     />
-    <title>Document</title>
+    <title>CV</title>
   </head>
   <body>
     <div class="page">
