--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
       href="https://fonts.googleapis.com/css2?family=Kalam:wght@300;400;700&display=swap"
       rel="stylesheet"
-    />
+   >
     <title>CV</title>
   </head>
   <body>
@@ -36,7 +36,7 @@
               alt="photo"
               width="32"
               class="photo"
-            />
+           >
           </div>
           <div class="photo-header">
             <h1>Elsukov Sergey</h1>
@@ -140,12 +140,12 @@
       <footer>
         <div class="footer_container">
           <a href="https://github.com/Adonisiy" class="link-github"
-            ><img src="./assets/icon/github.png" alt="icon of GitHub" />My
+            ><img src="./assets/icon/github.png" alt="icon of GitHub">My
             GitHub</a
           >
           <span>2024</span>
           <a href="https://rs.school/courses/javascript-ru">
-            <img src="./assets/icon/rsschool.png" alt="icon of RSSchool" />
+            <img src="./assets/icon/rsschool.png" alt="icon of RSSchool">
           </a>
         </div>
       </footer>
